syntax = "proto3";

package operator_auth;
import "google/api/annotations.proto";
option go_package = "operator_auth";

message OperatorAuth {
  string ID = 1;
  string DeviceID = 2;
}

message OperatorAuthRequest { OperatorAuth auth = 1; }
message OperatorAuthResponse {
  string jwt = 1;
  string result = 2;
}

service OperatorAuthService {
  rpc OperatorAuth(OperatorAuthRequest) returns (OperatorAuthResponse) {
    option (google.api.http) = {
      post : "/v1/get-jwt"
      body : "*"
    };
  }
}